Fix image hat z-index

--- a/less/base.less
+++ b/less/base.less
@@ -451,6 +451,7 @@ figure {
 	top: -75px;
 	width: 70px;
 	height: 141px;
+	z-index: 10;
 }
 #lock {
 	background: url('ui/lock.svg') no-repeat left;
